v0.0.7
Finished part of REST controller unit tests layer and refactroring